feat(Professor): permite a alteração das disciplinas que o professor ministra